// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders patient profile container correctly 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div>
      <div
        className={undefined}
      />
      <div
        className=""
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
              }
            }
          />
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              High Risk Patient
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Unknown
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              40
               • 
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Date of birth
              :
            </div>
            <div
              className={undefined}
            >
              1/1/1978
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Preferred language
              :
            </div>
            <div
              className={undefined}
            >
              English
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Location
              :
            </div>
            <div
              className={undefined}
            >
              Brooklyn, NY
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Patient since
              :
            </div>
            <div
              className={undefined}
            >
              Unknown
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Medicare ID
              :
            </div>
            <div
              className={undefined}
            >
              123456789
            </div>
          </div>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
          <div
            className=""
          />
        </div>
        <div
          className={undefined}
        >
          <textarea
            className={undefined}
            disabled={true}
            onChange={[Function]}
            placeholder="Loading..."
            value={undefined}
          />
          <div
            className={undefined}
          />
        </div>
      </div>
    </div>
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          Active medications
        </div>
        <div
          className={undefined}
        />
      </div>
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          Loading...
        </div>
      </div>
    </div>
    <div
      className=""
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className=""
            onClick={[Function]}
          >
            <div
              className={undefined}
            >
              <div
                className=""
              />
              <div
                className={undefined}
              >
                Care Team
              </div>
            </div>
            <div
              className=""
            />
          </div>
          <div
            className=""
          >
            <div>
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  />
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    >
                      Chat with team
                    </div>
                    <div
                      className={undefined}
                    >
                      Patient slack channel
                    </div>
                  </div>
                </div>
              </div>
              <div
                className={undefined}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=""
  >
    <div
      className={undefined}
    >
      <a
        className="undefined"
        href="/patients/undefined/encounters"
        onClick={[Function]}
      >
        Encounters
      </a>
      <a
        className=""
        href="/patients/undefined/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
      <a
        className=""
        href="/patients/undefined/tasks"
        onClick={[Function]}
      >
        Tasks
      </a>
    </div>
    <div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Sort by:
          </div>
          <div
            className={undefined}
          >
            <select
              value="Newest first"
            >
              <option
                value="Newest first"
              >
                Newest first
              </option>
            </select>
          </div>
        </div>
        <div
          className={undefined}
        >
          <input
            placeholder="Search by user or keywords"
            required={true}
            type="text"
          />
        </div>
      </div>
      <div
        className={undefined}
      >
        <div
          className=""
          onClick={[Function]}
        >
          <div
            className=""
          >
            <div
              className={undefined}
            >
              <div
                className=""
              />
              <div
                className={undefined}
              >
                Saving
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              />
              <div
                className={undefined}
              >
                Unable to save encounter
              </div>
              <div
                className={undefined}
              >
                Sorry, something went wrong. Please try saving this encounter again.
              </div>
              <div
                className=""
                onClick={[Function]}
              >
                Try again
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            Record new encounter
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Encounter reason
              :
            </div>
            <div
              className={undefined}
            >
              <input
                name="encounterReason"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  Location of encounter
                  :
                </div>
                <div
                  className={undefined}
                >
                  <input
                    name="encounterLocation"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  Start time
                  :
                </div>
                <div
                  className={undefined}
                >
                  <input
                    name="encounterStartTime"
                    onChange={[Function]}
                    required={true}
                    type="time"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className={undefined}
            >
              Encounter summary
              :
            </div>
            <div
              className={undefined}
            >
              <textarea
                name="encounterSummary"
                onChange={[Function]}
                required={true}
                value=""
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                />
                <div
                  className={undefined}
                >
                  Add attachment
                </div>
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className=""
                onClick={[Function]}
              >
                Cancel
              </div>
              <div
                className=""
                onClick={[Function]}
              >
                Submit
              </div>
            </div>
          </div>
        </div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            Loading...
          </div>
        </div>
      </div>
      <div
        className="undefined"
      >
        <div
          className={undefined}
          onClick={[Function]}
        />
        <div
          className={undefined}
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "none",
              }
            }
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  />
                  <div
                    className={undefined}
                  >
                    1 
                    <span>
                      of
                    </span>
                     0 
                    <span>
                      images
                    </span>
                  </div>
                </div>
                <div
                  className={undefined}
                  onClick={[Function]}
                />
              </div>
              <div
                className={undefined}
              >
                <div
                  className="undefined"
                  onClick={[Function]}
                />
                <div
                  className=""
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders patient profile for ipad 1`] = `
<div
  className={undefined}
>
  <div
    className={undefined}
  >
    <div
      className={undefined}
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        />
        <div
          className={undefined}
          style={
            Object {
              "backgroundImage": "url('http://bit.ly/2vaOMQJ')",
            }
          }
        />
        <div
          className={undefined}
        >
          Loading Patient
        </div>
        <div
          className=""
          onClick={[Function]}
        />
        <div
          className=""
          onClick={[Function]}
        />
      </div>
      <div
        className={undefined}
      >
        <div
          className=""
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="undefined"
    >
      <div>
        <div
          className={undefined}
        />
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                High Risk Patient
              </div>
              <div
                className={undefined}
              >
                Unknown Unknown
              </div>
              <div
                className={undefined}
              >
                40
                 • 
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Date of birth
                :
              </div>
              <div
                className={undefined}
              >
                1/1/1978
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Preferred language
                :
              </div>
              <div
                className={undefined}
              >
                English
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Location
                :
              </div>
              <div
                className={undefined}
              >
                Brooklyn, NY
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Patient since
                :
              </div>
              <div
                className={undefined}
              >
                Unknown
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                Medicare ID
                :
              </div>
              <div
                className={undefined}
              >
                123456789
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
            <div
              className=""
            />
          </div>
          <div
            className={undefined}
          >
            <textarea
              className={undefined}
              disabled={true}
              onChange={[Function]}
              placeholder="Loading..."
              value={undefined}
            />
            <div
              className={undefined}
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Active medications
          </div>
          <div
            className={undefined}
          />
        </div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            Loading...
          </div>
        </div>
      </div>
    </div>
    <div
      className="undefined"
    >
      <div
        className="undefined"
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            <div
              className="undefined"
              onClick={[Function]}
            >
              <div
                className={undefined}
              >
                <div
                  className="undefined"
                />
                <div
                  className={undefined}
                >
                  Care Team
                </div>
              </div>
              <div
                className="undefined"
              />
            </div>
            <div
              className="undefined"
            >
              <div>
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  >
                    <div
                      className={undefined}
                    />
                    <div
                      className={undefined}
                    >
                      <div
                        className={undefined}
                      >
                        Chat with team
                      </div>
                      <div
                        className={undefined}
                      >
                        Patient slack channel
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className={undefined}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className=""
      onClick={[Function]}
    />
  </div>
  <div
    className="undefined"
  >
    <div
      className={undefined}
    >
      <a
        className="undefined"
        href="/patients/undefined/encounters"
        onClick={[Function]}
      >
        Encounters
      </a>
      <a
        className=""
        href="/patients/undefined/patientInfo"
        onClick={[Function]}
      >
        Patient Info
      </a>
      <a
        className=""
        href="/patients/undefined/tasks"
        onClick={[Function]}
      >
        Tasks
      </a>
    </div>
    <div>
      <div
        className={undefined}
      >
        <div
          className={undefined}
        >
          <div
            className={undefined}
          >
            Sort by:
          </div>
          <div
            className={undefined}
          >
            <select
              value="Newest first"
            >
              <option
                value="Newest first"
              >
                Newest first
              </option>
            </select>
          </div>
        </div>
        <div
          className={undefined}
        >
          <input
            placeholder="Search by user or keywords"
            required={true}
            type="text"
          />
        </div>
      </div>
      <div
        className={undefined}
      >
        <div
          className=""
          onClick={[Function]}
        >
          <div
            className=""
          >
            <div
              className={undefined}
            >
              <div
                className=""
              />
              <div
                className={undefined}
              >
                Saving
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              />
              <div
                className={undefined}
              >
                Unable to save encounter
              </div>
              <div
                className={undefined}
              >
                Sorry, something went wrong. Please try saving this encounter again.
              </div>
              <div
                className=""
                onClick={[Function]}
              >
                Try again
              </div>
            </div>
          </div>
          <div
            className={undefined}
          >
            Record new encounter
          </div>
          <div
            className={undefined}
          >
            <div
              className={undefined}
            >
              Encounter reason
              :
            </div>
            <div
              className={undefined}
            >
              <input
                name="encounterReason"
                onChange={[Function]}
                required={true}
                type="text"
                value=""
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  Location of encounter
                  :
                </div>
                <div
                  className={undefined}
                >
                  <input
                    name="encounterLocation"
                    onChange={[Function]}
                    required={true}
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  Start time
                  :
                </div>
                <div
                  className={undefined}
                >
                  <input
                    name="encounterStartTime"
                    onChange={[Function]}
                    required={true}
                    type="time"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className={undefined}
            >
              Encounter summary
              :
            </div>
            <div
              className={undefined}
            >
              <textarea
                name="encounterSummary"
                onChange={[Function]}
                required={true}
                value=""
              />
            </div>
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                />
                <div
                  className={undefined}
                >
                  Add attachment
                </div>
              </div>
            </div>
            <div
              className={undefined}
            >
              <div
                className=""
                onClick={[Function]}
              >
                Cancel
              </div>
              <div
                className=""
                onClick={[Function]}
              >
                Submit
              </div>
            </div>
          </div>
        </div>
        <div
          className="undefined"
        >
          <div
            className={undefined}
          >
            Loading...
          </div>
        </div>
      </div>
      <div
        className="undefined"
      >
        <div
          className={undefined}
          onClick={[Function]}
        />
        <div
          className={undefined}
        >
          <div
            className={undefined}
            style={
              Object {
                "backgroundImage": "none",
              }
            }
          >
            <div
              className={undefined}
            >
              <div
                className={undefined}
              >
                <div
                  className={undefined}
                >
                  <div
                    className={undefined}
                  />
                  <div
                    className={undefined}
                  >
                    1 
                    <span>
                      of
                    </span>
                     0 
                    <span>
                      images
                    </span>
                  </div>
                </div>
                <div
                  className={undefined}
                  onClick={[Function]}
                />
              </div>
              <div
                className={undefined}
              >
                <div
                  className="undefined"
                  onClick={[Function]}
                />
                <div
                  className=""
                  onClick={[Function]}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
